@@ -1,5 +1,13 @@
 2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
 
+	* applet.c: (gnome_volume_applet_init),
+	(gnome_volume_applet_refresh):
+	* applet.h:
+	  Display tooltip showing current volume, based on a patch from
+	  Pedro Villavicencio <pvillavi@gnome.org> (#166914).
+
+2005-04-03  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
 	* applet.c: (gnome_volume_applet_setup):
 	  Some include fixes.
 	* preferences.c: (gnome_volume_applet_preferences_init):
